...
                android:text="Groups"
                android:textSize="10sp"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_post"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="6dp"
...
